# SiYi

./: .gitignore  .justfile  devenv.nix  devenv.yaml  package.json  pyproject.toml
backend/: devenv.nix  pyproject.toml
backend/src/: config.py  logger_setup.py  main.py
backend/src/mqtt/: router.py
frontend/: devenv.nix
listener/mcdr-plugin/: README.md  mcdreforged.plugin.json  pyproject.toml  requirements.txt
listener/mcdr-plugin/src/: __init__.py  config.py
listener/mcdr-plugin/src/libs/: protocol
shared/py-protocol/: README.md  pyproject.toml
shared/py-protocol/src/: __init__.py  client.py  logger.py  models.py  server.py
shared/py-protocol/tests/: test_client.py  test_integration.py  test_models.py  test_server.py
