[project]
name = "siyi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "siyi-backend",
    "siyi-mcdr-plugin",
    "siyi-py-protocol",
]

[tool.uv.workspace]
members = [
    "backend",
    "listener/mcdr-plugin",
    "shared/py-protocol",
]
exclude = []

[tool.uv.sources]
siyi-backend = { workspace = true }
siyi-mcdr-plugin = { workspace = true }
siyi-py-protocol = { workspace = true }

[tool.uv]
package = false

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["backend", "shared", "listener"]
venvPath = "."
venv = ".venv"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
