[project]
name = "siyi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "colorama>=0.4.6",
  "fastapi[standard]>=0.121.0",
  "pydantic-settings>=2.11.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "rich>=14.2.0",
  "sqlmodel>=0.0.27",
  "structlog>=25.5.0",
  "websockets>=15.0.1",
]
